nickel-lang-lib/tests/integration/typecheck/fail/record-typed-field-path.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'ParseError::TypedFieldWithoutDefinition'
{ x.y : Number }